実装。CloudAtCostのインストールパーツを増やす。

--- a/scripts/setup_cloudatcost/manager/main.yml
+++ b/scripts/setup_cloudatcost/manager/main.yml
@@ -18,6 +18,8 @@
         - git
         - language-pack-ja
         - byobu
+        - mongo-tools
+        - jq
 
   - name: locale setting
     shell: 'update-locale LANG=ja_JP.UTF-8'
