--- a/scripts/setup_cloudatcost/manager/main.yml
+++ b/scripts/setup_cloudatcost/manager/main.yml
@@ -18,7 +18,7 @@
         - git
         - language-pack-ja
         - byobu
-        - mongo-tools
+        - mongodb-clients
         - jq
 
   - name: locale setting
