--- a/scripts/setup_cloudatcost/containers/main.yml
+++ b/scripts/setup_cloudatcost/containers/main.yml
@@ -7,6 +7,9 @@
 
   handlers:
 
+  - name: change hostname per server
+    hostname: name="{{ inventory_hostname }}"
+
   - name: update tzdata
     command: /usr/sbin/dpkg-reconfigure --frontend noninteractive tzdata
 
@@ -23,7 +26,11 @@
     shell: 'update-locale LANG=ja_JP.UTF-8'
 
   - name: Set timezone variables
-    shell: 'timedatectl set-timezone Asia/Tokyo'
+    timezone:
+      name: Asia/Tokyo
+
+  - name: Setting swap file
+    include: tasks/swap.yml
 
   - name: firewall(ufw) settings
     include: tasks/firewall.yml
