--- a/centos-portforwarding-webbrowsing/Dockerfile
+++ b/centos-portforwarding-webbrowsing/Dockerfile
@@ -4,6 +4,8 @@ MAINTAINER kazuhito miura <@kazuhito_m>
 
 RUN apt-get update && \
     apt-get install -y openssh-client && \
+    apt-get autoclean && \
+    apt-get autoremove && \
     rm -rf /var/lib/apt/lists/*
 
 COPY scripts/boot.sh /boot.sh
