--- a/centos-portforwarding-webbrowsing/Dockerfile
+++ b/centos-portforwarding-webbrowsing/Dockerfile
@@ -3,10 +3,17 @@ FROM dorowu/ubuntu-desktop-lxde-vnc
 MAINTAINER kazuhito miura <@kazuhito_m>
 
 RUN apt-get update && \
-    apt-get install -y openssh-client && \
+    apt-get install -y openssh-client locales && \
     apt-get autoclean && \
     apt-get autoremove && \
     rm -rf /var/lib/apt/lists/*
+
+# タイムゾーン＆ロケール設定。
+RUN ln -sf  /usr/share/zoneinfo/Asia/Tokyo /etc/localtime \
+  && locale-gen ja_JP.UTF-8
+ENV LANG ja_JP.UTF-8
+ENV LANGUAGE ja_JP:en
+ENV LC_ALL ja_JP.UTF-8
 
 COPY scripts/boot.sh /boot.sh
 RUN chmod +x /boot.sh
