実装。aptの自動更新を設定。

--- a/scripts/setup_cloudatcost/tasks/common_settings.yml
+++ b/scripts/setup_cloudatcost/tasks/common_settings.yml
@@ -19,3 +19,10 @@
 - name: Set timezone variables
   timezone:
     name: Asia/Tokyo
+
+- name: apt auto update settngs.
+  copy:
+    src: "{{ item }}"
+    dest: /etc/apt/apt.conf.d/
+  with_fileglob:
+      - "resources/etc/apt/apt.conf.d/*"
