syntax erro fix.

--- a/scripts/setup_cloudatcost/tasks/common_settings.yml
+++ b/scripts/setup_cloudatcost/tasks/common_settings.yml
@@ -17,7 +17,7 @@
 
 - name: install and upgrade all packages
   apt:
-    name: {{ item }}
+    name: "{{ item }}"
     state: present
     update_cache: yes
   with_items:
