--- a/scripts/setup_cloudatcost/nodes/main.yml
+++ b/scripts/setup_cloudatcost/nodes/main.yml
@@ -15,8 +15,8 @@
   - name: common settings
     include: ../tasks/common_settings.yml
 
-  - name: Setting swap file
-    include: ../tasks/swap.yml
+  # - name: Setting swap file
+  #   include: ../tasks/swap.yml
 
   - name: firewall(ufw) settings
     include: ../tasks/firewall.yml
