実装。k8sの基本的なツールを導入するように。

--- a/scripts/setup_cloudatcost/nodes/main.yml
+++ b/scripts/setup_cloudatcost/nodes/main.yml
@@ -23,3 +23,6 @@
 
   - name: Docker install
     include: ../tasks/docker.yml
+
+  - name: Kubernetes basic tools install
+    include: ../tasks/kubernetes.yml
