--- a/scripts/setup_cloudatcost/tasks/common_settings.yml
+++ b/scripts/setup_cloudatcost/tasks/common_settings.yml
@@ -24,6 +24,7 @@
     - git
     - language-pack-ja
     - byobu
+    - apt-transport-https
 
 - name: locale setting
   shell: 'update-locale LANG=ja_JP.UTF-8'
