--- a/k8s-samples/nyumon/sample-rs.yaml
+++ b/k8s-samples/nyumon/sample-rs.yaml
@@ -1,7 +1,9 @@
-apiVersion: v1
+apiVersion: apps/v1
 kind: ReplicaSet
 metadata:
   name: echo
+  labels:
+    app: echo
 spec:
   replicas: 3
   selector:
@@ -9,9 +11,9 @@ spec:
       app: echo
   template:
     metadata:
-      labels: 
+      labels:
         app: echo
-    specs:
+    spec:
       containers:
       - name: nginx
         image: gihyodocker/nginx-proxy:latest
