implement: サンプルにならい、コンテナバージョンをカエル

--- a/k8s-samples/nyumon/sample-dp.yaml
+++ b/k8s-samples/nyumon/sample-dp.yaml
@@ -23,7 +23,7 @@ spec:
         ports:
         - containerPort: 80
       - name: echo
-        image: gihyodocker/echo:latest
+        image: gihyodocker/echo:pached
         ports:
         - containerPort: 8080
 
