bugfix; fix typo.

--- a/k8s-samples/nyumon/sample-dp.yaml
+++ b/k8s-samples/nyumon/sample-dp.yaml
@@ -23,7 +23,7 @@ spec:
         ports:
         - containerPort: 80
       - name: echo
-        image: gihyodocker/echo:pached
+        image: gihyodocker/echo:pacthed
         ports:
         - containerPort: 8080
 
