--- a/k8s-samples/nyumon/sample-sv.yaml
+++ b/k8s-samples/nyumon/sample-sv.yaml
@@ -61,3 +61,16 @@ spec:
         image: gihyodocker/echo:latest
         ports:
         - containerPort: 8080
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: echo
+spec:
+  selector:
+    app: echo
+    release: summer
+  ports:
+    - name: http
+      port: 80
+
