--- a/scripts/for_macine_parsonal/fumiko/test/vagrant/Vagrantfile
+++ b/scripts/for_macine_parsonal/fumiko/test/vagrant/Vagrantfile
@@ -7,29 +7,14 @@ Vagrant.configure("2") do |config|
   # Raidミラー環境の確認用に、HDDを2つ追加する。
   config.vm.provider :virtualbox do |p|
     disk_controller_name = 'IDE Controller' # 環境によって変わる。https://qiita.com/kjtanaka/items/8f3e92e029e46f826754#%E8%A3%9C%E8%B6%B3 のやり方で確認すること
-    # Disk 01
-    disk01_file = "./.tmp/sdb.vdi"
-    unless File.exists?(disk01_file)
-      p.customize [
-        'createmedium', 'disk',
-        '--filename', disk01_file,
-        '--format', 'VDI',
-        '--size', 1 * 1024]
-    end
-    p.customize [
-      'storageattach', :id,
-      '--storagectl', disk_controller_name,
-      '--port', 1,
-      '--device', 0,
-      '--type', 'hdd',
-      '--medium', disk01_file]
     # portcountをディスクの数だけ増やす(例:2つ)
     p.customize [
       'storagectl', :id,
       '--name', disk_controller_name,
       '--portcount', 2]
+
     # Disk 02
-    disk02_file = "./.tmp/sdc.vdi"
+    disk02_file = "./.tmp/sdb.vdi"
     unless File.exists?(disk02_file)
       p.customize [
         'createmedium', 'disk',
@@ -40,9 +25,48 @@ Vagrant.configure("2") do |config|
     p.customize [
       'storageattach', :id,
       '--storagectl', disk_controller_name,
+      '--port', 1,
+      '--device', 0,
+      '--type', 'hdd',
+      '--medium', disk02_file]
+    # Disk 03
+    disk03_file = "./.tmp/sdc.vdi"
+    unless File.exists?(disk03_file)
+      p.customize [
+        'createmedium', 'disk',
+        '--filename', disk03_file,
+        '--format', 'VDI',
+        '--size', 1 * 1024]
+    end
+    p.customize [
+      'storageattach', :id,
+      '--storagectl', disk_controller_name,
       '--port', 0,
       '--device', 1,
       '--type', 'hdd',
-      '--medium', disk02_file]
+      '--medium', disk03_file]
+    # Disk 04
+    disk04_file = "./.tmp/sdd.vdi"
+    unless File.exists?(disk04_file)
+      p.customize [
+        'createmedium', 'disk',
+        '--filename', disk04_file,
+        '--format', 'VDI',
+        '--size', 1 * 1024]
+    end
+    p.customize [
+      'storageattach', :id,
+      '--storagectl', disk_controller_name,
+      '--port', 1,
+      '--device', 1,
+      '--type', 'hdd',
+      '--medium', disk04_file]
   end
+
+  # IPを設定ファイルから読み込む。
+  target_ip = ""
+  File.foreach("./vagrant_hosts"){|line|
+    target_ip = line.chomp()
+  }
+  config.vm.network "private_network", ip: target_ip
 end
