--- a/scripts/for_macine_parsonal/fumiko/test/vagrant/Vagrantfile
+++ b/scripts/for_macine_parsonal/fumiko/test/vagrant/Vagrantfile
@@ -69,4 +69,13 @@ Vagrant.configure("2") do |config|
     target_ip = line.chomp()
   }
   config.vm.network "private_network", ip: target_ip
+
+  # ssh設定
+  config.vm.provision "shell" do |s|
+    ssh_pub_key = File.readlines(".tmp/id_rsa.pub").first.strip
+    s.inline = <<-SHELL
+      echo #{ssh_pub_key} >> /home/vagrant/.ssh/authorized_keys
+      chmod 400 /home/vagrant/.ssh/authorized_keys
+    SHELL
+  end
 end
