implement: Ansibleの設定を書き始める。
まずは、全更新とインストールとネットワーク設定。

--- a/scripts/for_macine_parsonal/fumiko/main.yml
+++ b/scripts/for_macine_parsonal/fumiko/main.yml
@@ -3,8 +3,33 @@
 
 - hosts: all
   become: yes
+  become_user: root
 
   tasks:
 
-  - name: テスト表示
-    shell: 'whoami'
+  - block:
+
+    - name: システム全更新。
+      apt:
+        update_cache: "yes"
+        upgrade: "dist"
+
+    - name: 必要なツールをインストール。
+      apt:
+        name:
+          - tree
+          - byobu
+          - vim
+          - ntp
+
+  - block:
+
+    # - name: ネットワーク設定ファイルを反映。
+    #   copy: 
+    #     src: resources/etc/network/interfaces
+    #     dest: /etc/network/interfaces
+    #     backup: yes
+
+    - name: ホスト名設定。
+      hostname:
+        name: fumiko
