--- a/scripts/for_macine_parsonal/matsuichi/main.yml
+++ b/scripts/for_macine_parsonal/matsuichi/main.yml
@@ -5,6 +5,9 @@
   become: yes
   become_user: root
 
+  vars:
+    host_name: matsuichi
+
   tasks:
 
   - block:
@@ -51,7 +54,13 @@
 
     - name: ホスト名設定。
       hostname:
-        name: matsuichi
+        name: {{ host_name }}
+
+    - name: raspi-config設定
+      shell: |
+        raspi-config nonint do_hostname {{ host_name }}
+        raspi-config nonint do_change_locale ja_JP.UTF-8
+        raspi-config nonint do_change_timezone Asia/Tokyo
 
   - block:
 
