--- a/scripts/for_macine_parsonal/matsuichi/main.yml
+++ b/scripts/for_macine_parsonal/matsuichi/main.yml
@@ -76,3 +76,22 @@
         daemon_reload: yes
         enabled: yes
 
+  - block:
+
+    - name: ゾーンファイルをコピー。
+    - copy:
+        src: "{{ item }}"
+        dest: /etc/bind/
+        owner: root
+        group: bind
+        mode: 644
+        backup: yes
+      with_fileglob:
+        - resources/etc/bind/*
+
+    - name: bind9サービス再起動。
+      systemd:
+        name: bind9.service
+        state: restarted
+        daemon_reload: yes
+        enabled: yes
