bugfix: yamlの書式修正。

--- a/scripts/for_macine_parsonal/matsuichi/main.yml
+++ b/scripts/for_macine_parsonal/matsuichi/main.yml
@@ -79,7 +79,7 @@
   - block:
 
     - name: ゾーンファイルをコピー。
-    - copy:
+      copy:
         src: "{{ item }}"
         dest: /etc/bind/
         owner: root
