--- a/scripts/for_macine_parsonal/matsuichi/resources/etc/dhcp/dhcpd.conf
+++ b/scripts/for_macine_parsonal/matsuichi/resources/etc/dhcp/dhcpd.conf
@@ -14,4 +14,4 @@ subnet 192.168.1.0 netmask 255.255.255.0 {
 default-lease-time 600;
 max-lease-time 7200;
 
-log-facility local7;z
+log-facility local7;
