implement: バックアップスクリプトの「構造」だけをまず組む。

--- a/scripts/for_macine_parsonal/fumiko/main.yml
+++ b/scripts/for_macine_parsonal/fumiko/main.yml
@@ -152,3 +152,9 @@
         hour: "4,10,16,22"
         job: "/usr/local/lib/maintenance/health_check_raid_array.sh >> /var/log/maintenance/health_check_raid_array.log 2>&1"
         state: present
+
+    - name: RAIDチェックスクリプトのcrontab設定。
+      cron:
+        name: homeのフルバックアップ。
+        job: "/usr/local/lib/maintenance/full_backup_home.sh >> /var/log/maintenance/full_backup_home.log 2>&1"
+        state: present
