implement: ダンプコマンドを実行。

--- a/scripts/for_macine_parsonal/fumiko/main.yml
+++ b/scripts/for_macine_parsonal/fumiko/main.yml
@@ -33,6 +33,7 @@
           - mdadm
           - nfs-kernel-server
           - fdisk
+          - dump
 
   - block:
 
@@ -156,5 +157,8 @@
     - name: homeのフルバックアップスクリプトのcrontab設定。
       cron:
         name: homeのフルバックアップ。
+        minute: "12"
+        hour: "1"
+        weekday: "1" # 月曜
         job: "/usr/local/lib/maintenance/full_backup_home.sh >> /var/log/maintenance/full_backup_home.log 2>&1"
         state: present
