implement: 共通で使うと思われるパッケージを追加。

--- a/scripts/for_macine_parsonal/minoru/main.yml
+++ b/scripts/for_macine_parsonal/minoru/main.yml
@@ -40,6 +40,9 @@
           - tree
           - byobu
           - ntp
+          - curl
+          - apt-transport-https
+          - gnupg
 
   - block:
 
