doc: 手動操作で一応GROWI動くまで持っていった。

--- a/scripts/for_macine_parsonal/hachiro/main.yml
+++ b/scripts/for_macine_parsonal/hachiro/main.yml
@@ -23,6 +23,9 @@
           - curl
           - ntp
           - nfs-common
+          - sudo
+          - parted
+          - dnsutils
 
   - block:
 
