implement: Ansibleで読み出す、依存タスクファイルを定義してみる。

--- a/scripts/for_macine_parsonal/hachiro/main.yml
+++ b/scripts/for_macine_parsonal/hachiro/main.yml
@@ -38,3 +38,8 @@
     - name: ホスト名設定。
       hostname:
         name: hachiro
+
+  - block: 
+
+    - name: 本家からのdocker/docker-composeインストール。
+      include_tasks: tasks/install_docker.yml
