implement: dockerインストールのレシピを作成する。

--- a/scripts/for_macine_parsonal/hachiro/main.yml
+++ b/scripts/for_macine_parsonal/hachiro/main.yml
@@ -10,12 +10,13 @@
   - block:
 
     - name: システム全更新。
-      apt:
+      ansible.builtin.apt:
         update_cache: "yes"
         upgrade: "dist"
+        autoremove: true
 
     - name: 必要なツールをインストール。
-      apt:
+      ansible.builtin.apt:
         name:
           - tree
           - byobu
