--- a/scripts/for_macine_parsonal/hachiro/tasks/install_growi_on_docker.yml
+++ b/scripts/for_macine_parsonal/hachiro/tasks/install_growi_on_docker.yml
@@ -1,7 +1,36 @@
 # coding:utf-8
 # for Debian 11
 
+- name: GROWIのdocker-composeソースフォルダの存在確認。
+  stat:
+    path: "/var/lib/growi/docker_compose"
+  register: growi_src_dir
+
 - name: GROWIのdocker-composeリポジトリから、ソースアーカイブ(zip)をダウンロード。
   ansible.builtin.get_url:
     url: https://github.com/weseek/growi-docker-compose/archive/refs/heads/master.zip
     dest: /tmp/growi.zip
+  when: not growi_src_dir.stat.exists
+
+- name: 解凍先ディレクトリ作成。
+  file:
+    path: /var/lib/growi/
+    state: directory
+
+- name: ソースアーカイブを解凍。
+  ansible.builtin.unarchive:
+    src: /tmp/growi.zip
+    dest: /var/lib/growi
+    remote_src: yes
+  when: not growi_src_dir.stat.exists
+
+- name: ソースフォルダを規定の名前に変更。
+  shell: mv /var/lib/growi/growi-docker-c* /var/lib/growi/docker_compose
+  when: not growi_src_dir.stat.exists
+
+- name: GROWIのdocker-composeを実行。
+  shell: |
+    docker compose ps | grep "docker_compose-app" \
+    || docker compose up -d
+  args:
+    chdir: /var/lib/growi/docker_compose
