implement: 設定ファイルの書き換えを実装。これで一旦のフル機能作成。

--- a/scripts/for_macine_parsonal/hachiro/tasks/install_growi_on_docker.yml
+++ b/scripts/for_macine_parsonal/hachiro/tasks/install_growi_on_docker.yml
@@ -24,9 +24,21 @@
     remote_src: yes
   when: not growi_src_dir.stat.exists
 
+
 - name: ソースフォルダを規定の名前に変更。
   shell: mv /var/lib/growi/growi-docker-c* /var/lib/growi/docker_compose
   when: not growi_src_dir.stat.exists
+
+- name: GROWIのdocker-compose.ymlを今回の設定に合わせ変更。
+  shell: |
+    cat ./docker-compose.yml \
+    | sed 's/127\.0\.0\.1://g' \
+    | sed 's/growi_data:\//\/var\/lib\/growi\/data\/app:\//g' \
+    | sed 's/mongo_configdb:\//\/var\/lib\/growi\/data\/mongo\/configdb:\//g' \
+    | sed 's/mongo_db:\//\/var\/lib\/growi\/data\/mongo\/db:\//g' > ./tmp.yml \
+    && mv ./tmp.yml ./docker-compose.yml
+  args:
+    chdir: /var/lib/growi/docker_compose
 
 - name: GROWIのdocker-composeを実行。
   shell: |
