implement: Swapファイルを作りマウントするレシピファイルを追加。メインから呼ぶように。

--- a/scripts/for_macine_parsonal/hachiro/main.yml
+++ b/scripts/for_macine_parsonal/hachiro/main.yml
@@ -41,6 +41,11 @@
       hostname:
         name: hachiro
 
+  - block:
+
+    - name: Swapをファイルで設定する。
+      include_tasks: tasks/generate-and-mount-swapfile.yml
+
   - block: 
 
     - name: 本家からのdocker/docker-composeインストール。
