--- a/scripts/for_macine_parsonal/hachiro/tasks/generate_and_mount_swapfile.yml
+++ b/scripts/for_macine_parsonal/hachiro/tasks/generate_and_mount_swapfile.yml
@@ -4,9 +4,10 @@
 - name: スワップファイルの定義。
   set_fact:
     swap_file_path: /var/swapfile
+    swap_file_size: 2G
 
 - name: スワップファイルの作成。
-  shell: dd if=/dev/zero of={{ swap_file_path }} bs={{ ansible_memtotal_mb / 2 }} count=1M
+  shell: dd if=/dev/zero of={{ swap_file_path }} bs={{ swap_file_size }} count=1
   args:
     creates: '{{ swap_file_path }}'
 
