implement: 毎日取るバックアップのスクリプトと、それをCronに置くAnsibleを実装。

--- a/scripts/for_macine_parsonal/hachiro/main.yml
+++ b/scripts/for_macine_parsonal/hachiro/main.yml
@@ -69,3 +69,9 @@
         fstype: nfs
         opts: "user,auto"
         state: mounted
+
+    - name: バックアップスクリプトを毎日実行cronに登録。
+      copy:
+        src: ./resources/etc/cron.daily/backup_backup_daily.sh
+        dest: /etc/cron.daily
+        mode: 0755
