implement: hachiroにドメインの検索能力とNTPクライアント設定を追加。

--- a/scripts/for_macine_parsonal/hachiro/main.yml
+++ b/scripts/for_macine_parsonal/hachiro/main.yml
@@ -42,6 +42,12 @@
       hostname:
         name: hachiro
 
+    - name: NTPクライアント設定ファイルを反映。
+      copy: 
+        src: resources/etc/systemd/timesyncd.conf
+        dest: /etc/systemd/timesyncd.conf
+        backup: yes
+
   - block:
 
     - name: Swapをファイルで設定する。
