--- a/scripts/for_macine_parsonal/fumiko/main.yml
+++ b/scripts/for_macine_parsonal/fumiko/main.yml
@@ -28,7 +28,6 @@
           - byobu
           - vim
           - curl
-          - ntp
           - parted
           - mdadm
           - nfs-kernel-server
@@ -47,20 +46,11 @@
       hostname:
         name: fumiko
 
-  - block:
-
-    - name: NTP設定ファイルを反映。
+    - name: NTPクライアント設定ファイルを反映。
       copy: 
-        src: resources/etc/ntp.conf
-        dest: /etc/ntp.conf
+        src: resources/etc/systemd/timesyncd.conf
+        dest: /etc/systemd/timesyncd.conf
         backup: yes
-
-    - name: NTPサービス再起動。
-      systemd:
-        name: ntp.service
-        state: restarted
-        daemon_reload: yes
-        enabled: yes
 
   - name: すでにRAIDが構築されているかを確認。
     shell: grep '/home' /etc/fstab
