--- a/scripts/for_macine_parsonal/matsuichi/resources/etc/dhcpcd.conf
+++ b/scripts/for_macine_parsonal/matsuichi/resources/etc/dhcpcd.conf
@@ -16,3 +16,4 @@ interface eth0
 static ip_address=192.168.1.5/24
 static routers=192.168.1.1
 static domain_name_servers=192.168.1.5 192.168.1.1 8.8.8.8
+static domain_search=local.miu2.f5.si
