--- a/scripts/for_macine_parsonal/fumiko/main.yml
+++ b/scripts/for_macine_parsonal/fumiko/main.yml
@@ -36,11 +36,11 @@
 
   - block:
 
-    # - name: ネットワーク設定ファイルを反映。
-    #   copy: 
-    #     src: resources/etc/network/interfaces
-    #     dest: /etc/network/interfaces
-    #     backup: yes
+    - name: ネットワーク設定ファイルを反映。
+      copy:
+        src: resources/etc/network/interfaces
+        dest: /etc/network/interfaces
+        backup: yes
 
     - name: ホスト名設定。
       hostname:
